[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bson = "2.10.0"
futures = "0.3.30"
mongodb = { version = "2.8.2", features = ["async-std"] }
reqwest = "0.12.3"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = "1.37.0"
uuid = "1.8.0"
