[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.0"
bcrypt = "0.15.1"
bson = "2.10.0"
futures = "0.3.30"
mongodb = { version = "2.8.2", features = ["async-std"] }
rand = "0.8.5"
reqwest = "0.12.3"
rsa = "0.9.6"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
uuid = "1.8.0"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
