[package]
name = "zvms_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.86"
axum = "0.7.5"
axum-core = "0.4.3"
axum-extra = { version = "0.9.3", features = [
    "form",
    "query",
    "typed-header",
    "typed-routing",
    "multipart",
] }
b2-client = { version = "0.1.3", features = ["with_surf"] }
base64 = "0.22.0"
bcrypt = "0.15.1"
bson = "2.10.0"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
jsonwebtoken = "9.3.0"
magic = "0.16.2"
mongodb = { version = "2.8.2", features = ["async-std"] }
once_cell = "1.19.0"
pem = { version = "3.0.4", features = ["serde"] }
polars = "0.39.2"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
rand = "0.8.5"
reqwest = "0.12.3"
rsa = "0.9.6"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = { version = "0.13.0", features = ["axum"] }
socketioxide = { version = "0.12.0", features = [
    "state",
    "extensions",
    "tracing",
] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "time",
    "serde",
    "serde_json",
    "json",
    "regex",
] }
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
zerocopy = "0.7.32"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
